--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="owl.carousel.min.css">
     <link rel="stylesheet" href="owl.theme.default.min.css">
 </head>
-<body>
+<body class="home">
     <div id="page" class="site">
         <header class="header">
             <div class="header-top-line header-top-line_display">
@@ -73,8 +73,8 @@
                 </div>
             </div>
         </section>
-        <div class="container">
-               <section class="day-product">
+        <section class="day-product">
+            <div class="container">
                 <div class="heading-line">
                     <h2 class="heading-line__heading">Товар дня</h2>
                     <a href="#" class="heading-line__show-all">показать все</a>
@@ -108,8 +108,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="product-slider">
+            </div>
+        </section>
+        <section class="product-slider">
+            <div class="container">
                 <div class="heading-line">
                     <h2 class="heading-line__heading">Акции</h2>
                     <a href="#" class="heading-line__show-all">показать все</a>
@@ -170,8 +172,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="categories">
+            </div>
+        </section>
+        <section class="categories">
+            <div class="container">
                 <div class="heading-line">
                     <h2 class="heading-line__heading">Категории товара</h2>
                 </div>
@@ -294,8 +298,10 @@
                         </a> 
                     </div>
                 </div>
-            </section>
-            <section class="services">
+            </div>
+        </section>
+        <section class="services">
+            <div class="container">
                 <div class="services__wrapper">
                     <div class="services__item services__item_main">
                         <div class="services__item-info">
@@ -334,8 +340,10 @@
                         <div class="services__item-image services__item-image_tools"></div>
                     </div>
                 </div>
-            </section>
-            <section class="advantages">
+            </div>
+        </section>
+        <section class="advantages">
+            <div class="container">
                 <div class="advantages__wrapper">
                     <div class="advantages__item">
                         <svg class="advantages__item-icon advantages__item-icon_delivery" width="113" height="67" viewBox="0 0 113 67" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -392,8 +400,10 @@
                         <h3 class="advantages__item-heading">Качественная упаковка</h3>
                     </div>
                 </div>
-            </section>
-            <section class="info">
+            </div>
+        </section>
+        <section class="info">
+            <div class="container">
                 <h2 class="info__heading">Информация</h2>
                 <h3 class="info__subheading">Глобус</h3>
                 <div class="info__text">
@@ -401,9 +411,9 @@
                     <p>and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires</p>
                     <p>to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
                 </div>
-            </section>
-         </div>
-         <footer class="footer">
+            </div>
+        </section>
+        <footer class="footer">
              <div class="container">
                  <div class="footer__separator"></div>
                  <h2 class="footer__site-logo">GLOBUS</h2>
